Add SSL & SASL Docker configuration options